--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.3",
     "country-list": "^2.3.0",
+    "currency-codes": "^2.1.0",
     "emoji-picker-react": "^4.11.1",
     "i18n-iso-countries": "^7.11.2",
     "jquery": "^3.7.1",
