--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# REACT_APP_BASE_URL=https://beta.medxbay.com/api
+REACT_APP_BASE_URL=https://beta.medxbay.com/api
 
-REACT_APP_BASE_URL=http://localhost:8000
+# REACT_APP_BASE_URL=http://localhost:8000
